<?xml version="1.0" encoding="utf-8"?>
<!--TRANG KIM LOI - 22110371 - Le Nhut Anh - 22110279 -->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="a"
            type="nix.food.android.ui.main.MainActivity" />

        <variable
            name="vm"
            type="nix.food.android.ui.main.MainViewModel"/>
        <import type="android.view.View" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:id="@+id/hot_fragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_alignParentBottom="true">

            <com.google.android.material.bottomappbar.BottomAppBar
                android:id="@+id/app_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:backgroundTint="#f6f6f6"
                app:fabCradleRoundedCornerRadius="50dp"
                app:fabCradleVerticalOffset="6dp">
                <LinearLayout
                    android:id="@+id/home"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.2"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            app:srcCompat="@drawable/btn_home" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/home"
                            android:textAlignment="center"
                            android:textColor="#676767"
                            android:textSize="12sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/profile"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.2"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:srcCompat="@drawable/btn_profile" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/profile"
                            android:textAlignment="center"
                            android:textColor="#676767"
                            android:textSize="12sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.2"
                        android:orientation="vertical"
                        android:visibility="visible">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAlignment="center"
                            android:textColor="#676767"
                            android:textSize="12sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/support"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.2"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            app:srcCompat="@drawable/btn_support" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/support"
                            android:textAlignment="center"
                            android:textColor="#676767"
                            android:textSize="12sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/setting"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.2"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            app:srcCompat="@drawable/btn_setting" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/setting"
                            android:textAlignment="center"
                            android:textColor="#676767"
                            android:textSize="12sp" />
                    </LinearLayout>
                </LinearLayout>
            </com.google.android.material.bottomappbar.BottomAppBar>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:src="@drawable/shopping_cart"
                app:layout_anchor="@id/app_bar"
                app:maxImageSize="@dimen/_25sdp"
                android:background="@android:color/transparent"/>

        </androidx.coordinatorlayout.widget.CoordinatorLayout>
    </RelativeLayout>


</layout>